add resume pdf and typo corrections

--- a/main.tex
+++ b/main.tex
@@ -6,7 +6,7 @@
 % https://github.com/rahulworld/rahulworld-Resume
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\documentclass[]{rahulworld-resume}
+\documentclass[]{resume}
 
 \usepackage{fontawesome}
 % \usepackage{setspace}
@@ -41,8 +41,8 @@
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{minipage}[t]{0.33\textwidth} 
 % \begin{minipage}[t]{0.33\textwidth} 
+\begin{minipage}[t]{0.30\textwidth} 
 \begin{large}
 	\headername{Benjamin MacDonald}\\
 \end{large}
@@ -72,11 +72,11 @@ Windows, GNU/Linux
 \cvskill{C++}{2}
 \cvskill{Java}{2}
 \vspace{6pt}
-\subsection{Framework}
+\subsection{Frameworks}
 Node.js, Express \\ Arduino, Vue.js, Angular \\ socket.io, Maven, Gradle
 \vspace{6pt}
 \subsection{Tools}
-MongoDB, Azure, Github Actions \\ SQL, VS Code, Vim, Git, QT
+MongoDB, Azure, Github Actions \\ SQL, VS Code, Vim, Git, Qt
 \sectionsep
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     COURSEWORK
@@ -114,14 +114,13 @@ Rock Climbing, Technical Theatre, Discord Bots
 \hfill
 \begin{minipage}[t]{0.66\textwidth} 
 % \begin{minipage}[t]{0.60\textwidth} 
-% \descript{BS in Computer ence}
-\hspace*{0pt}\hfill    \\
+\descript{}
 \hspace*{0pt}\hfill    \\
 \hspace*{0pt}\hfill    \\
 \hspace*{0pt}\hfill    \\
 \hspace*{0pt}\hfill +1 (403) 923-7429 \\
+\hspace*{0pt}\hfill \textbf{\href{b-macdonald.ca}{b-macdonald.ca}} \\
 \hspace*{0pt}\hfill \textbf{\href{mailto:benjamin@networkalliance.ca}{benjamin@networkalliance.ca}} \\
-% \hspace*{0pt}\hfill Web.:\textbf{\href{http://MAKEMEEXIST.io}{http://aaa.net}} 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     SIDE PROJECT
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -132,8 +131,8 @@ Rock Climbing, Technical Theatre, Discord Bots
 \noindent
 \hspace{3em}%
 \begin{minipage}{0.85\textwidth\vspace{5pt}}
-• A CI tool allowing contributors to preview their pull request before it is deployed to the master branch.\\
-• Utilizes a web-server running in Azure and listens for GitHub Webhooks
+• A CI tool allowing contributors to preview their pull request before it is deployed to the master branch of a static site.\\
+• Utilizes a web-server running in Azure which receives data from\\GitHub Webhooks.
 \end{minipage}
 \runsubsection{Speed Climbing Training Tool}
 \descript{Python, Qt}
@@ -189,21 +188,21 @@ Rock Climbing, Technical Theatre, Discord Bots
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Achievements/Awards} 
 \noindent\rule{12.5cm}{0.4pt}
-\datecolor{2019} \runsubsection{ International (Pan-American) Speed Climbing Athlete }
-\descript{}
-\noindent
-\hspace{3em}%
-\begin{minipage}{0.85\textwidth\vspace{2pt}}
-• Qualified for the Pan-American games as part of the Canadian team for Speed Climbing (Rock Climbing), by placing 3rd at Canadian Nationals. 
-\end{minipage}
-\sectionsep
-
 \datecolor{2013-2019} \runsubsection{National Level Rock Climber}
 \descript{}
 \noindent
 \hspace{3em}%
 \begin{minipage}{0.85\textwidth\vspace{2pt}}
-• Competed at Canadian Rock Climbing Nationals each year, medalling in 2013 (Regionals, Gold), 2016 (Nationals, Silver) and 2019 (Nationals, Bronze). 
+•\,Competed at Canadian Rock Climbing Nationals each year, medalling in 2013 (Regionals, Gold), 2016 (Nationals, Silver) and 2019 (Nationals, Bronze). 
+\end{minipage}
+\sectionsep
+
+\datecolor{2019} \runsubsection{ International (Pan-American) Speed Climbing Athlete }
+\descript{}
+\noindent
+\hspace{3em}%
+\begin{minipage}{0.85\textwidth\vspace{2pt}}
+• Qualified for the Youth Pan-American games as part of the Canadian team for Speed Climbing (Rock Climbing), by placing 3rd at Canadian Nationals. 
 \end{minipage}
 \sectionsep
 
@@ -212,7 +211,7 @@ Rock Climbing, Technical Theatre, Discord Bots
 \noindent
 \hspace{3em}%
 \begin{minipage}{0.85\textwidth\vspace{2pt}}
-• Awarded for maintain an overall academic average above 85\%.
+• Awarded for maintaining an overall academic average above 85\%.
 \end{minipage}
 \end{minipage} 
 \end{document}  \documentclass[]{article}
