--- a/main.tex
+++ b/main.tex
@@ -147,7 +147,7 @@ Rock Climbing, Technical Theatre, Discord Bots
 \hspace{3em}%
 \begin{minipage}{0.85\textwidth\vspace{5pt}}
 • Listens for E1.31 web requests, and translates it to LED strip lighting configurations.\\
-• Provides a http user portal and support for automatic VLAN\\detection and entering a pairing mode.
+• Provides a http user portal, support for automatic VLAN detection\\and entering a pairing mode.
 \end{minipage}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     EXPERIENCE
