--- a/main.tex
+++ b/main.tex
@@ -94,7 +94,7 @@ MongoDB, Azure, Github Actions \\ SQL, VS Code, Vim, Git, Qt
 \section{Education} 
 \noindent\rule{5cm}{0.4pt}\\
 \datecolor{2021-2025}
-\subsection{B.Science in CS}
+\subsection{Candidate for B.Science in CS}
 University of Victoria \\
 \vspace{8pt}
 \datecolor{2018-2021}
@@ -102,6 +102,8 @@ University of Victoria \\
 Dr. E.P. Scarlett\\
 Percentage: 88\%
 \section{Interests}
+\noindent\rule{5cm}{0.4pt}
+
 Rock Climbing, Technical Theatre, Discord Bots
 \sectionsep
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -168,8 +170,8 @@ Rock Climbing, Technical Theatre, Discord Bots
 \noindent
 \hspace{3em}%
 \begin{minipage}{0.85\textwidth\vspace{2pt}}
-• Acted as a liaison between various stakeholders ensure high quality performances were successfully broadcast.\\
-• Wrote custom software to support operations and automate administrative tasks.
+• Acted as a liaison between various stakeholders to ensure high\\quality performances were successfully broadcast.\\
+• Wrote custom software to support operations and automate\\administrative tasks.
 \end{minipage}
 \sectionsep
 
@@ -178,7 +180,7 @@ Rock Climbing, Technical Theatre, Discord Bots
 \noindent
 \hspace{3em}%
 \begin{minipage}{0.85\textwidth\vspace{2pt}}
-• Coached provincial and national level athletes including designing training regimes, assessing progress, and provided competition support.\\
+• Coached provincial and national level athletes including designing training regimes, assessing progress, and providing competition\\support.\\
 • Created an automated system to generate personalized progress reports and training plans for each athlete.
 \end{minipage}
 \sectionsep
@@ -188,14 +190,6 @@ Rock Climbing, Technical Theatre, Discord Bots
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Achievements/Awards} 
 \noindent\rule{12.5cm}{0.4pt}
-\datecolor{2013-2019} \runsubsection{National Level Rock Climber}
-\descript{}
-\noindent
-\hspace{3em}%
-\begin{minipage}{0.85\textwidth\vspace{2pt}}
-•\,Competed at Canadian Rock Climbing Nationals each year, medalling in 2013 (Regionals, Gold), 2016 (Nationals, Silver) and 2019 (Nationals, Bronze). 
-\end{minipage}
-\sectionsep
 
 \datecolor{2019} \runsubsection{ International (Pan-American) Speed Climbing Athlete }
 \descript{}
@@ -203,6 +197,15 @@ Rock Climbing, Technical Theatre, Discord Bots
 \hspace{3em}%
 \begin{minipage}{0.85\textwidth\vspace{2pt}}
 • Qualified for the Youth Pan-American games as part of the Canadian team for Speed Climbing (Rock Climbing), by placing 3rd at Canadian Nationals. 
+\end{minipage}
+\sectionsep
+
+\datecolor{2013-2019} \runsubsection{National Level Rock Climber}
+\descript{}
+\noindent
+\hspace{3em}%
+\begin{minipage}{0.85\textwidth\vspace{2pt}}
+•\,Competed at Canadian Rock Climbing Nationals each year, medalling in 2013 (Regionals, Gold), 2016 (Nationals, Silver) and 2019 (Nationals, Bronze). 
 \end{minipage}
 \sectionsep
 
