add https to ensure guarantee external link

--- a/main.tex
+++ b/main.tex
@@ -121,7 +121,7 @@ Rock Climbing, Technical Theatre, Discord Bots
 \hspace*{0pt}\hfill    \\
 \hspace*{0pt}\hfill    \\
 \hspace*{0pt}\hfill +1 (403) 923-7429 \\
-\hspace*{0pt}\hfill \textbf{\href{b-macdonald.ca}{b-macdonald.ca}} \\
+\hspace*{0pt}\hfill \textbf{\href{https://www.b-macdonald.ca}{b-macdonald.ca}} \\
 \hspace*{0pt}\hfill \textbf{\href{mailto:benjamin@networkalliance.ca}{benjamin@networkalliance.ca}} \\
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     SIDE PROJECT
