update courses and contact organization

--- a/main.tex
+++ b/main.tex
@@ -48,7 +48,7 @@
 \end{large}
 Computer Science (Bachelor of Science)\\
 Expected Graduation 2025\\
-University of Victoria, Canada \\ 
+University of Victoria, Canada\\
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     LINKS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -84,7 +84,8 @@ MongoDB, Azure, Github Actions \\ SQL, VS Code, Vim, Git, Qt
 \section{Coursework}
 \noindent\rule{5cm}{0.4pt}
 
-• Fundamentals of Programming\\
+• Fundamentals of Programming I\\
+• Calculus I\\
 • Logic and Foundations\\
 • MIT OpenCourseWare - \\Introduction to Algorithms (Self Study)
 \sectionsep
@@ -120,9 +121,10 @@ Rock Climbing, Technical Theatre, Discord Bots
 \hspace*{0pt}\hfill    \\
 \hspace*{0pt}\hfill    \\
 \hspace*{0pt}\hfill    \\
-\hspace*{0pt}\hfill +1 (403) 923-7429 \\
-\hspace*{0pt}\hfill \textbf{\href{https://www.b-macdonald.ca}{b-macdonald.ca}} \\
+\hspace*{0pt}\hfill \textbf{\href{https://b-macdonald.ca}{b-macdonald.ca}} \\
 \hspace*{0pt}\hfill \textbf{\href{mailto:benjamin@networkalliance.ca}{benjamin@networkalliance.ca}} \\
+\hspace*{0pt}\hfill +1 (403) 923-7429 \\
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     SIDE PROJECT
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
