--- a/main.tex
+++ b/main.tex
@@ -44,7 +44,7 @@
 % \begin{minipage}[t]{0.33\textwidth} 
 \begin{minipage}[t]{0.30\textwidth} 
 \begin{large}
-	\headername{Benjamin MacDonald}\\
+	\headername{Ben MacDonald}\\
 \end{large}
 Computer Science (Bachelor of Science)\\
 Expected Graduation 2025\\
@@ -84,8 +84,8 @@ MongoDB, Azure, Github Actions \\ SQL, VS Code, Vim, Git, Qt
 \section{Coursework}
 \noindent\rule{5cm}{0.4pt}
 
-• Fundamentals of Programming I\\
-• Calculus I\\
+• Fundamentals of Programming I \& II\\
+• Calculus I \& II \\
 • Logic and Foundations\\
 • MIT OpenCourseWare - \\Introduction to Algorithms (Self Study)
 \sectionsep
@@ -97,6 +97,7 @@ MongoDB, Azure, Github Actions \\ SQL, VS Code, Vim, Git, Qt
 \datecolor{2021-2025}
 \subsection{Candidate for B.Science in CS}
 University of Victoria \\
+Sessional GPA: 4.0\\
 \vspace{8pt}
 \datecolor{2018-2021}
 \subsection{High School}
@@ -105,7 +106,7 @@ Percentage: 88\%
 \section{Interests}
 \noindent\rule{5cm}{0.4pt}
 
-Rock Climbing, Technical Theatre, Discord Bots
+Rock Climbing, Technical Theatre, Robotics
 \sectionsep
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
@@ -120,9 +121,9 @@ Rock Climbing, Technical Theatre, Discord Bots
 \descript{}
 \hspace*{0pt}\hfill    \\
 \hspace*{0pt}\hfill    \\
-\hspace*{0pt}\hfill    \\
+
 \hspace*{0pt}\hfill \textbf{\href{https://b-macdonald.ca}{b-macdonald.ca}} \\
-\hspace*{0pt}\hfill \textbf{\href{mailto:benjamin@networkalliance.ca}{benjamin@networkalliance.ca}} \\
+\hspace*{0pt}\hfill \textbf{\href{mailto:ben@networkalliance.ca}{ben@networkalliance.ca}} \\
 \hspace*{0pt}\hfill +1 (403) 923-7429 \\
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -145,12 +146,12 @@ Rock Climbing, Technical Theatre, Discord Bots
 \begin{minipage}{0.85\textwidth\vspace{5pt}}
 • Automatically records, tracks and times climbers during a training session using system clock and http requests to a GoPro.
 \end{minipage}
-\runsubsection{E1.31 (Web Protocol) Implementation for Arduino }
+\runsubsection{sACN (Web Protocol) Implementation for Arduino }
 \descript{Arduino, C++, C}
 \noindent
 \hspace{3em}%
 \begin{minipage}{0.85\textwidth\vspace{5pt}}
-• Listens for E1.31 web requests, and translates it to LED strip lighting configurations.\\
+• Listens for multicasted sACN web requests, and translates them to LED strip lighting configurations.\\
 • Provides a http user portal, support for automatic VLAN detection\\and entering a pairing mode.
 \end{minipage}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -193,6 +194,14 @@ Rock Climbing, Technical Theatre, Discord Bots
 \section{Achievements/Awards} 
 \noindent\rule{12.5cm}{0.4pt}
 
+\datecolor{2021} \runsubsection{UVic Entry Scholarship for Academic Achievement}
+\descript{}
+\noindent
+\hspace{3em}%
+\begin{minipage}{0.85\textwidth\vspace{2pt}}
+• Awarded for maintaining an overall academic average above 85\%.
+\end{minipage}
+
 \datecolor{2019} \runsubsection{ International (Pan-American) Speed Climbing Athlete }
 \descript{}
 \noindent
@@ -211,12 +220,5 @@ Rock Climbing, Technical Theatre, Discord Bots
 \end{minipage}
 \sectionsep
 
-\datecolor{2021} \runsubsection{UVic Entry Scholarship for Academic Achievement}
-\descript{}
-\noindent
-\hspace{3em}%
-\begin{minipage}{0.85\textwidth\vspace{2pt}}
-• Awarded for maintaining an overall academic average above 85\%.
-\end{minipage}
 \end{minipage} 
 \end{document}  \documentclass[]{article}
