update tex code

--- a/main.tex
+++ b/main.tex
@@ -84,9 +84,10 @@ MongoDB, Azure, Github Actions \\ SQL, VS Code, Vim, Git, Qt
 \section{Coursework}
 \noindent\rule{5cm}{0.4pt}
 
-• Fundamentals of Programming I \& II\\
 • Calculus I \& II \\
-• Logic and Foundations\\
+• Mathematical Logic and Foundations\\
+• Fundamentals of Programming I \& II\\
+• Introduction to Computer Architecture
 • MIT OpenCourseWare - \\Introduction to Algorithms (Self Study)
 \sectionsep
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
